welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:17: error: ')' expected but 'if' found.
  if (speed>61 &speed<86 {
  ^caughtSpeeding:20: error: ')' expected but 'if' found.
  if (speed>86) {
  ^